--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,32 @@
   </head>
 
   <body>
+  <header>
+    <nav>
+      <div>
+        <a href="/"><span>Bookers</span></a>
+
+        <div>
+          <ul>
+            <% if user_signed_in? %>
+
+              <li><%= link_to "Home", user_path(current_user.id) %></li>
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "Books" %></li>
+              <li><%= link_to "Log out", user_registration_path, method: :delete %></li>
+
+            <% else %>
+              <li><%= link_to "Home", root_path %></li>
+              <li><%= link_to "About", about_path %></li>
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <li><%= link_to "Log in", new_user_session_path %></li>
+            <% end %>
+            
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
     <%= yield %>
   </body>
 </html>
