--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
               <li><%= link_to "Home", user_path(current_user.id) %></li>
               <li><%= link_to "Users", users_path %></li>
               <li><%= link_to "Books" %></li>
-              <li><%= link_to "Log out", user_registration_path, method: :delete %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 
             <% else %>
               <li><%= link_to "Home", root_path %></li>
@@ -30,7 +30,7 @@
               <li><%= link_to "Sign up", new_user_registration_path %></li>
               <li><%= link_to "Log in", new_user_session_path %></li>
             <% end %>
-            
+
           </ul>
         </div>
       </div>
