--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<% @users.each do |user|%>
+<%= image_tag user.get_profile_image(100,100) %>
+<%= user.name %>
+
+<% end %>
